review and restructuring code of all layers of the note entity